Fix issue viewing desktop site on mobile.

--- a/blog.css
+++ b/blog.css
@@ -17,11 +17,13 @@
 }
 
 .blog-entry > h3 {
+	width: 100%;
 	text-align: center;
 }
 
 .blog-text p {
 	margin-top: 0;
+	width: 100%;
 }
 
 @media screen and ( min-width: 450px ) {
